# revonto

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  release.yml  test.yml  test_on_push.yml
examples/: reverse_lookup_inflammation_cancer.py
src/revonto/: associations.py  multiple_testing.py  ontology.py  ortholog.py  pvalcalc.py  reverse_lookup.py
tests/: conftest.py  test_associations.py  test_module1.py  test_multiple_testing.py  test_ontology.py  test_ortholog.py  test_pvalcalc.py  test_reverse_lookup.py
tests/data/: human_test.gaf
