[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "revonto"
authors = [
    {name = "Vladimir Smrkolj", email = "vladimir.smrkolj@gmail.com"},
    {name = "Aljoša Škorjanc", email = "skorjanc.aljosa@gmail.com"},
]
description = "Python library for Gene Ontology Reverse Lookup"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["gene ontology", "reverse lookup"]
license = {text = "GPL-3.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "revonto.__version__"}

#[project.optional-dependencies]
#gui = ["PyQt5"]
#cli = [
#  "rich",
#  "click",
#]
#
#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
#
#[project.scripts]
#spam-cli = "spam:main_cli"